rsa_manager( pubkey_encrypt, prikey_decrypt ) の実装

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,15 +14,6 @@ else()
 endif()
 
 
-
-
-add_library( W_RSA_MANAGER SHARED
-			  ./w_rsa/rsa_manager.cpp
-)
-target_link_libraries( W_RSA_MANAGER PUBLIC
-						${OPENSSL_LIBRARIES}
-)
-
 add_library( W_EVP_PKEY SHARED
 			  ./w_evp_pkey/evp_pkey.cpp
 )
@@ -31,14 +22,32 @@ target_link_libraries( W_EVP_PKEY PUBLIC
 )
 
 
+add_library( W_RSA_MANAGER SHARED
+			  ./w_rsa/rsa_manager.cpp
+)
+target_link_libraries( W_RSA_MANAGER PUBLIC
+						W_EVP_PKEY
+						${OPENSSL_LIBRARIES}
+)
+
+add_library( W_AES_MANAGER SHARED
+			  ./w_aes/aes_manager.cpp
+)
+target_link_libraries( W_AES_MANAGER PUBLIC
+						${OPENSSL_LIBRARIES}
+)
+
+
 
 add_executable(runner runner.cpp)
 target_link_libraries( runner PRIVATE 
 						W_RSA_MANAGER
+						W_AES_MANAGER
 						W_EVP_PKEY
 )
 
 
 
-add_definitions( -std=c++20 -w )
+# add_definitions( -std=c++20 -w )
+add_definitions( -std=c++20 )
 
